--- a/style.css
+++ b/style.css
@@ -120,3 +120,10 @@ body{
     /* height: 10vh; */
     border-radius: 25px;   
 }
+#shareButton{
+    width: fit-content;
+    height: fit-content;
+    padding: 12px;
+    border: none;
+    background-color: var(--primary-color);
+}
