--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     padding: 0;
 }
 body{
-    background-image: url("background.png");
+    background-image: url("background.webp");
     background-size: cover;
     height: 100vh;
     width: 100vw;
