--- a/mobile.css
+++ b/mobile.css
@@ -1,11 +1,10 @@
 @media only screen and (max-width: 800px){
     body{
-        overflow: visible;
+        overflow-y: visible;
     }
     .img img{
         width: 100%;
         height: auto;
-        /* animation: none; */
     }
     .wrapper{
         flex-direction: column;
