--- a/mobile.css
+++ b/mobile.css
@@ -4,7 +4,7 @@
     }
     .img img{
         width: 100%;
-        height: auto;
+        height: fit-content;
     }
     .wrapper{
         flex-direction: column;
